<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Damang</string>
    <string name="title_activity_controlcenter">Damang</string>
    <string name="action_settings">Pengaturan</string>
    <string name="action_debug">Area Testing</string>
    <string name="action_quit">Keluar</string>
    <string name="action_donate">Donate</string>
    <string name="controlcenter_fetch_activity_data">Sinkronisasi</string>
    <string name="controlcenter_find_device">Find lost device</string>
    <string name="find_lost_device_message">Search for %1$s?</string>
    <string name="controlcenter_take_screenshot">Take Screenshot</string>
    <string name="controlcenter_change_led_color">Change LED Color</string>
    <string name="controlcenter_change_fm_frequency">Change FM Frequency</string>
    <string name="controlcenter_connect">Connect…</string>
    <string name="controlcenter_disconnect">Disconnect</string>
    <string name="controlcenter_delete_device">Delete Device</string>
    <string name="controlcenter_delete_device_name">Delete %1$s</string>
    <string name="controlcenter_delete_device_dialogmessage">This will delete the device and all associated data!</string>
    <string name="controlcenter_set_alias">Set Alias</string>
    <string name="controlcenter_navigation_drawer_open">Open navigation drawer</string>
    <string name="controlcenter_navigation_drawer_close">Close navigation drawer</string>
    <string name="controlcenter_snackbar_need_longpress">Long press the card to disconnect</string>
    <string name="controlcenter_snackbar_disconnecting">Memutuskan koneksi dengan perangkat...</string>
    <string name="controlcenter_snackbar_connecting">Connecting…</string>
    <string name="controlcenter_snackbar_requested_screenshot">Taking a screenshot of the device</string>
    <string name="controlcenter_calibrate_device">Calibrate Device</string>
    <string name="battery_detail_activity_title">Battery info</string>
    <string name="battery_level">Battery level</string>
    <string name="calendar_day">Day</string>
    <string name="calendar_week">Week</string>
    <string name="calendar_two_weeks">Two weeks</string>
    <string name="calendar_month">Month</string>
    <string name="calendar_three_months">3 months</string>
    <string name="calendar_six_months">6 months</string>
    <string name="calendar_year">Year</string>
    <string name="title_activity_debug">Area Testing</string>
    <string name="debugactivity_really_factoryreset_title">Really factory reset?</string>
    <string name="debugactivity_really_factoryreset">Doing a factory reset will delete all data from the connected device (if supported). Xiaomi/Huami devices also change Bluetooth MAC address, so they appear as a new devices to Gadgetbridge.</string>
    <string name="title_activity_appmanager">App Manager</string>
    <string name="appmanager_cached_watchapps_watchfaces">Apps in cache</string>
    <string name="appmanager_installed_watchapps">Installed apps</string>
    <string name="appmanager_installed_watchfaces">Installed watchfaces</string>
    <string name="appmananger_app_delete">Delete</string>
    <string name="appmananger_app_delete_cache">Delete and remove from cache</string>
    <string name="appmananger_app_reinstall">Reinstall</string>
    <string name="appmanager_app_openinstore">Search in Pebble appstore</string>
    <string name="appmanager_health_activate">Activate</string>
    <string name="appmanager_health_deactivate">Deactivate</string>
    <string name="appmanager_hrm_activate">Activate HRM</string>
    <string name="appmanager_hrm_deactivate">Deactivate HRM</string>
    <string name="appmanager_weather_activate">Activate System Weather app</string>
    <string name="appmanager_weather_deactivate">Deactivate System Weather app</string>
    <string name="appmanager_weather_install_provider">Install the Weather Notification app</string>
    <string name="app_configure">Configure</string>
    <string name="app_move_to_top">Move to top</string>
    <string name="title_activity_appblacklist">Notification blacklist</string>
    <string name="blacklist_all_for_notifications">Blacklist all for notifications</string>
    <string name="whitelist_all_for_notifications">Whitelist all for notifications</string>
    <string name="title_activity_calblacklist">Blacklisted Calendars</string>
    <string name="title_activity_fw_app_insaller">FW/App installer</string>
    <string name="fw_upgrade_notice">You are about to install the %s.</string>
    <string name="fw_upgrade_notice_amazfitbip">You are about to install the %s firmware on your Amazfit Bip.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitbip_lite">You are about to install the %s firmware on your Amazfit Bip Lite.\n\nPlease make sure to install the .fw file, and after that the .res file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitcor">You are about to install the %s firmware on your Amazfit Cor.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitcor2">You are about to install the %s firmware on your Amazfit Cor 2.
\n
\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.
\n
\nNote: You do not have to install .res if it is exactly the same as the one previously installed.
\n
\nPROCEED AT YOUR OWN RISK!
\n
\nCOMPLETELY UNTESTED, PROBABLY YOU NEED TO FLASH A BEATS_W FIRMWARE IF YOUR DEVICE NAME IS \"Amazfit Band 2\"</string>
    <string name="fw_upgrade_notice_amazfitgtr">You are about to install the %s firmware on your Amazfit GTR.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitgts">You are about to install the %s firmware on your Amazfit GTS.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfit_trex">You are about to install the %s firmware on your Amazfit T-Rex.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitvergel">You are about to install the %s firmware on your Amazfit Verge Lite.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_miband3">You are about to install the %s firmware on your Mi Band 3.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_miband4">You are about to install the %s firmware on your Mi Band 4.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_miband5">You are about to install the %s firmware on your Mi Band 5.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitx">You are about to install the %s firmware on your Amazfit X.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitneo">You are about to install the %s firmware on your Amazfit Neo.
\n
\nYour band will reboot after installing the .fw file.
\n
\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_multi_upgrade_notice">You are about to install the %1$s and %2$s firmware, instead of the ones currently on your Mi Band.</string>
    <string name="miband_firmware_known">This firmware has been tested and is known to be compatible with Gadgetbridge.</string>
    <string name="miband_firmware_unknown_warning">"This firmware is untested and may not be compatible with Gadgetbridge.\n\nYou are DISCOURAGED from flashing it!"</string>
    <string name="bpm">bpm</string>
    <string name="aplikasi_pendamping_kesehatan">Aplikasi Pendamping Kesehatan</string>
    <string name="dan_olahraga_anda">dan olahraga anda !</string>
    <string name="pantau_kondisi_jantung">Pantau Kondisi Jantung</string>
    <string name="selalu_pantau_kondisi_kesehatan">Selalu pantau kondisi kesehatan</string>
    <string name="anda_melalui_data_detak_jantung">anda melalui data detak jantung</string>
    <string name="dapatkan_laporan_kesehatan">Dapatkan laporan kesehatan</string>
    <string name="dengan_mudah_melalui_aplikasi">dengan mudah melalui aplikasi</string>
    <string name="pendamping_olahraga">Pendamping Olahraga</string>
    <string name="berolahraga_dengan_aman_dan">Berolahraga dengan aman dan</string>
    <string name="tenang_melalui_fitur_pendamping">tenang melalui fitur pendamping</string>
    <string name="olahraga_pada_aplikasi">olahraga pada aplikasi</string>
    <string name="mulai_sekarang">Mulai Sekarang!</string>
    <string name="mulai_aplikasi_damang">Mulai aplikasi Damang</string>
    <string name="sekarang_juga">sekarang juga!</string>
    <string name="_11_mei_2021">11 Mei 2021</string>
    <string name="_87_bpm">87 bpm</string>
    <string name="tanggal">Tanggal</string>
    <string name="kesehatan_anda_baik">Kesehatan anda baik</string>
    <string name="_27_april_2000">27 April 2000</string>
    <string name="laporan_kesehatan">Laporan Kesehatan</string>
    <string name="_177">177</string>
    <string name="harian">Harian</string>
    <string name="mingguan">Mingguan</string>
    <string name="bulanan">Bulanan</string>
    <string name="pemula">Pemula (5 - 10 menit)</string>
    <string name="menengah">Menengah (10 - 20 menit)</string>
    <string name="lanjutan">Lanjutan (15 - 30 menit)</string>
    <string name="_8_jam">8 Jam Durasi Tidur</string>
    <string name="sangat_baik">Sangat Baik</string>
</resources>