<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="#FFFFFF"
    android:id="@+id/cardviewCondition">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvStatus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="#BDF5BC"
            app:cardCornerRadius="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/cvStatus"
            app:layout_constraintTop_toTopOf="@+id/cvStatus" />

        <TextView
            android:layout_marginBottom="8dp"
            android:id="@+id/txtTanggal"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_11_mei_2021"
            app:layout_constraintBottom_toBottomOf="@+id/cvStatus"
            app:layout_constraintStart_toEndOf="@+id/cvStatus" />

        <TextView
            android:id="@+id/txtDetakJantung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/_87_bpm"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cvStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cvStatus" />

        <TextView
            android:id="@+id/txtStatusKesehatan"
            android:textStyle="bold"
            android:textColor="#19C118"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kesehatan_anda_baik"
            app:layout_constraintEnd_toEndOf="@+id/txtDetakJantung"
            app:layout_constraintTop_toBottomOf="@+id/txtDetakJantung" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>