<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewSport"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/txtTanggalTidur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_27_april_2000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/txtDurasiTidur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8_jam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSkorTidur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="90"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtKeteranganSkor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sangat_baik"
            android:textStyle="bold"
            android:textColor="#19C118"
            app:layout_constraintEnd_toEndOf="@+id/txtSkorTidur"
            app:layout_constraintStart_toStartOf="@+id/txtSkorTidur"
            app:layout_constraintTop_toBottomOf="@+id/txtSkorTidur" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>